--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>HTML·CSS·SASS boilerplate!</title>
+    <title>Super Mario HTML5!</title>
 
     <!-- External CSS -->
-    <link rel="stylesheet" type="text/css" href="/css/reset-min.css">
-    <link rel="stylesheet" type="text/css" href="/css/code-min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/css/reset-min.css">
+    <link rel="stylesheet" type="text/css" href="stylesheets/css/core-min.css">
 
   </head>
   <body>
-    <p>It's a bird!  It's a plane!  No, it's a... website...</p>    
+    <div id="ground"></div>
   </body>
 </html>
