--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   </head>
   <body>
+    <div class="cloud" id="c1"></div>
+    <div class="cloud" id="c2"></div>
     <div id="ground"></div>
   </body>
 </html>
